--- a/EventScheduling/EventScheduling.Api/appsettings.json
+++ b/EventScheduling/EventScheduling.Api/appsettings.json
@@ -1,6 +1,6 @@
 {
   "ConnectionStrings": {
-    "DefaultConnection": "C:\\Projects\\Code Challenge\\EventScheduling\\EventScheduling.Infrastructure\\event-schedulingdb"
+    "DefaultConnection": "..\\EventScheduling.Infrastructure\\event-schedulingdb"
   },
   "Logging": {
     "LogLevel": {
