--- a/EventScheduling/EventScheduling.Application/EventScheduling.Application.csproj
+++ b/EventScheduling/EventScheduling.Application/EventScheduling.Application.csproj
@@ -13,6 +13,8 @@
   <ItemGroup>
     <Folder Include="City\Interfaces\" />
     <Folder Include="DependencyInjection\" />
+    <Folder Include="User\Interfaces\" />
+    <Folder Include="User\UseCases\" />
   </ItemGroup>
 
   <ItemGroup>
