--- a/EventScheduling/EventScheduling.Domain/EventScheduling.Domain.csproj
+++ b/EventScheduling/EventScheduling.Domain/EventScheduling.Domain.csproj
@@ -16,6 +16,7 @@
     <Folder Include="User\Enums\" />
     <Folder Include="User\Exceptions\" />
     <Folder Include="User\Commands\" />
+    <Folder Include="User\Queries\" />
     <Folder Include="User\Repositories\" />
   </ItemGroup>
 
