--- a/EventScheduling/EventScheduling.Api/appsettings.json
+++ b/EventScheduling/EventScheduling.Api/appsettings.json
@@ -2,6 +2,10 @@
   "ConnectionStrings": {
     "DefaultConnection": "..\\EventScheduling.Infrastructure\\event-schedulingdb"
   },
+  "LocationService": {
+    "Url": "http://api.weatherstack.com/",
+    "AccessKey": "90e1bfac667aa465080564e01a2c4d4a"
+  },
   "Logging": {
     "LogLevel": {
       "Default": "Information",
