--- a/EventScheduling/EventScheduling.Application/EventScheduling.Application.csproj
+++ b/EventScheduling/EventScheduling.Application/EventScheduling.Application.csproj
@@ -14,6 +14,8 @@
     <Folder Include="City\Interfaces\" />
     <Folder Include="City\Exceptions\" />
     <Folder Include="DependencyInjection\" />
+    <Folder Include="Event\Interfaces\" />
+    <Folder Include="Event\UseCases\" />
     <Folder Include="User\Interfaces\" />
     <Folder Include="User\Exceptions\" />
     <Folder Include="User\UseCases\" />
