--- a/EventScheduling/EventScheduling.Infrastructure/EventScheduling.Infrastructure.csproj
+++ b/EventScheduling/EventScheduling.Infrastructure/EventScheduling.Infrastructure.csproj
@@ -17,6 +17,7 @@
       <PrivateAssets>all</PrivateAssets>
       <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
     </PackageReference>
+    <PackageReference Include="Microsoft.Extensions.Http" Version="7.0.0" />
   </ItemGroup>
 
   <ItemGroup>
@@ -27,7 +28,9 @@
     <Folder Include="EntityFramework\City\Repositories\" />
     <Folder Include="EntityFramework\Country\Repositories\" />
     <Folder Include="DependencyInjection\" />
+    <Folder Include="EntityFramework\Event\Repositories\" />
     <Folder Include="EntityFramework\User\Repositories\" />
+    <Folder Include="Services\" />
   </ItemGroup>
 
 </Project>
