create event complete

--- a/EventScheduling/EventScheduling.Domain/EventScheduling.Domain.csproj
+++ b/EventScheduling/EventScheduling.Domain/EventScheduling.Domain.csproj
@@ -8,7 +8,7 @@
 
   <ItemGroup>
     <Folder Include="City\Commands\" />
-    <Folder Include="Country\Exceptions\" />
+    <Folder Include="City\Exceptions\" />
     <Folder Include="Country\Repositories\" />
     <Folder Include="Event\Enums\" />
     <Folder Include="Event\Commands\" />
