--- a/EventScheduling/EventScheduling.Application/EventScheduling.Application.csproj
+++ b/EventScheduling/EventScheduling.Application/EventScheduling.Application.csproj
@@ -15,6 +15,7 @@
     <Folder Include="City\Exceptions\" />
     <Folder Include="DependencyInjection\" />
     <Folder Include="Event\Interfaces\" />
+    <Folder Include="Event\Exceptions\" />
     <Folder Include="Event\UseCases\" />
     <Folder Include="User\Interfaces\" />
     <Folder Include="User\Exceptions\" />
